image-gallery/image-gallery.css
/*Github Page Only Controls*/
html {
  font-family: Open Sans;
}
body, a {
  background-color: black;
  color: white;
  margin: auto;
}
h1 {
  text-align: center;
  max-width: 800px;
  margin: auto;	
}
.profile-box {
	touch-action: manipulation;
}
.profile-box-img img {
  max-width: 90vw;
  max-height: 50vh;
}
label {
	padding: 5px;
	white-space: nowrap;
}
#viewer {
	z-index: 99;
	position: absolute;
	background-color: black;
	width: 100vw;
	height: 100vh;
}
.holder {
}

.holder img {
}
/*End Github*/

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.profile-category {
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  padding-bottom: 5px;
  scroll-snap-type: x proximity;
}
.profile-box {
  display: inline-block;
  margin: 5px;
  vertical-align: top;
  scroll-snap-align: center;
  border: 1px solid white;
  box-shadow: 3px 3px;
  white-space: normal;
}
.profile-box:active {
  box-shadow: 1px 1px;
  transform: translate(2px,2px);
}
.profile-category::-webkit-scrollbar { 
  z-index: 0;
  height: 12px;
}
.profile-category::-webkit-scrollbar-thumb {
  background: white;
}
.profile-category::-webkit-scrollbar-track {
  background: #444444;
}
.popitem {
    position: absolute;
    background-color: black;
    right: 0;
    left: 0;
    display: none;
}
.popitem { display: block; }

/*scrollbars for top and bottom labels only on desktop*/
@media only screen and (max-width : 1040px) {
div { scrollbar-width: 0 !important; }
div::-webkit-scrollbar { width: 0 !important }
}

